parser/src/parser/snapshots/parser__parser__parser__tests__lambda-6.snap
---
source: parser/src/parser/parser.rs
description: "lambda a, *b, c: a"
---
Module {
    node: Node {
        start: 0,
        end: 18,
    },
    body: [
        ExpressionStatement(
            Lambda(
                Lambda {
                    node: Node {
                        start: 0,
                        end: 18,
                    },
                    args: Arguments {
                        node: Node {
                            start: 7,
                            end: 15,
                        },
                        posonlyargs: [],
                        args: [
                            Arg {
                                node: Node {
                                    start: 7,
                                    end: 8,
                                },
                                arg: "a",
                                annotation: None,
                            },
                        ],
                        vararg: Some(
                            Arg {
                                node: Node {
                                    start: 11,
                                    end: 12,
                                },
                                arg: "b",
                                annotation: None,
                            },
                        ),
                        kwonlyargs: [
                            Arg {
                                node: Node {
                                    start: 14,
                                    end: 15,
                                },
                                arg: "c",
                                annotation: None,
                            },
                        ],
                        kw_defaults: [],
                        kwarg: None,
                        defaults: [],
                    },
                    body: Name(
                        Name {
                            node: Node {
                                start: 17,
                                end: 18,
                            },
                            id: "a",
                        },
                    ),
                },
            ),
        ),
    ],
}
