parser/src/parser/snapshots/parser__parser__parser__tests__lambda-7.snap
---
source: parser/src/parser/parser.rs
description: "lambda a, *b, c, **d: a"
---
Module {
    node: Node {
        start: 0,
        end: 23,
    },
    body: [
        ExpressionStatement(
            Lambda(
                Lambda {
                    node: Node {
                        start: 0,
                        end: 23,
                    },
                    args: Arguments {
                        node: Node {
                            start: 7,
                            end: 20,
                        },
                        posonlyargs: [],
                        args: [
                            Arg {
                                node: Node {
                                    start: 7,
                                    end: 8,
                                },
                                arg: "a",
                                annotation: None,
                            },
                        ],
                        vararg: Some(
                            Arg {
                                node: Node {
                                    start: 11,
                                    end: 12,
                                },
                                arg: "b",
                                annotation: None,
                            },
                        ),
                        kwonlyargs: [
                            Arg {
                                node: Node {
                                    start: 14,
                                    end: 15,
                                },
                                arg: "c",
                                annotation: None,
                            },
                        ],
                        kw_defaults: [],
                        kwarg: Some(
                            Arg {
                                node: Node {
                                    start: 19,
                                    end: 20,
                                },
                                arg: "d",
                                annotation: None,
                            },
                        ),
                        defaults: [],
                    },
                    body: Name(
                        Name {
                            node: Node {
                                start: 22,
                                end: 23,
                            },
                            id: "a",
                        },
                    ),
                },
            ),
        ),
    ],
}
