parser/src/parser/snapshots/parser__parser__parser__tests__match_statement.snap
---
source: parser/src/parser/parser.rs
description: "match a:\n    case 1:\n        pass"
---
Module {
    node: Node {
        start: 0,
        end: 33,
    },
    body: [
        Match(
            Match {
                node: Node {
                    start: 0,
                    end: 33,
                },
                subject: Name(
                    Name {
                        node: Node {
                            start: 6,
                            end: 7,
                        },
                        id: "a",
                    },
                ),
                cases: [
                    MatchCase {
                        node: Node {
                            start: 13,
                            end: 33,
                        },
                        pattern: MatchValue(
                            MatchValue {
                                node: Node {
                                    start: 18,
                                    end: 19,
                                },
                                value: Constant(
                                    Constant {
                                        node: Node {
                                            start: 18,
                                            end: 19,
                                        },
                                        value: Int(
                                            "1",
                                        ),
                                    },
                                ),
                            },
                        ),
                        guard: None,
                        body: [
                            Pass(
                                Pass {
                                    node: Node {
                                        start: 29,
                                        end: 33,
                                    },
                                },
                            ),
                        ],
                    },
                ],
            },
        ),
    ],
}
